--- a/web/todoooohskaaaa/style.css
+++ b/web/todoooohskaaaa/style.css
@@ -59,6 +59,26 @@ ul{
     
 }
 
+.a{
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    
+}
+
+hr{
+    width: 500px;
+}
+
 li{
     display: block;
     height: 50px ; 
